--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2016": "^6.24.1",
+    "bulma-start": "0.0.2",
     "css-loader": "^0.28.11",
     "live-server": "^1.2.0",
     "node-sass": "^4.9.0",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "babel-preset-react": "6.24.1",
+    "bulma": "^0.7.1",
     "react-router-dom": "^4.2.2",
     "webpack-cli": "^2.0.15"
   }
