--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "normalize.css": "^8.0.0",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-input-autosize": "^2.2.1",
     "react-modal": "^3.4.4",
     "sass-loader": "^7.0.1",
     "shortid": "^2.2.8",
