--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.3.2",
     "react-input-autosize": "^2.2.1",
     "react-modal": "^3.4.4",
+    "react-scroll-to-component": "^1.0.2",
     "sass-loader": "^7.0.1",
     "shortid": "^2.2.8",
     "style-loader": "^0.21.0",
