--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scroll-to-component": "^1.0.2",
     "redux": "^4.0.0",
     "redux-devtools": "^3.4.1",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^7.0.1",
     "shortid": "^2.2.8",
     "style-loader": "^0.21.0",
