--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "webpack-dev-server": "^3.1.3"
   },
   "devDependencies": {
+    "babel-plugin-jsx-control-statements": "^3.2.8",
     "babel-preset-react": "6.24.1",
     "bulma": "^0.7.1",
     "react-router-dom": "^4.2.2",
