--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bulma-start": "0.0.2",
     "css-loader": "^0.28.11",
     "firebase": "^5.0.4",
+    "install": "^0.11.0",
     "live-server": "^1.2.0",
     "node-sass": "^4.9.0",
     "normalize.css": "^8.0.0",
